--- a/package.json
+++ b/package.json
@@ -32,24 +32,32 @@
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
   },
-  "dependencies": {},
+  "dependencies": {
+    "aggregation-repository-provider": "^2.0.18",
+    "caporal": "^0.10.0",
+    "execa": "^1.0.0",
+    "github-repository-provider": "^4.0.3",
+    "local-repository-provider": "^3.0.3",
+    "semver": "^5.5.1"
+  },
   "devDependencies": {
+    "ava": "^1.0.0-beta.8",
     "documentation": "^8.1.2",
     "markdown-doctest": "^0.9.1",
     "nyc": "^13.1.0",
-    "ava": "^1.0.0-beta.8",
     "rollup": "^0.66.2",
-    "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-cleanup": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-multi-entry": "^2.0.2",
-    "rollup-plugin-istanbul": "^2.0.1",
+    "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-executable": "^1.3.0",
+    "rollup-plugin-istanbul": "^2.0.1",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-multi-entry": "^2.0.2",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "semantic-release": "^15.9.16",
     "travis-deploy-once": "^5.0.8"
   },
   "engines": {
-    "node": ">=8.12"
+    "node": ">=10.11"
   },
   "repository": {
     "type": "git",
