--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,4 @@ after_script:
   - cat ./build/coverage/lcov.info | coveralls
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
+notifications: {}
