--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "main": "dist/index.js",
   "module": "src/mkpr.mjs",
   "description": "create pull request by streaming content through a filter",
   "keywords": [
@@ -53,7 +54,7 @@
     "rollup-plugin-multi-entry": "^2.0.2",
     "rollup-plugin-node-resolve": "^3.4.0",
     "semantic-release": "^15.9.16",
-    "travis-deploy-once": "^5.0.8"
+    "travis-deploy-once": "^5.0.9"
   },
   "engines": {
     "node": ">=10.11"
