--- a/package.json
+++ b/package.json
@@ -34,18 +34,21 @@
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.0.18",
-    "caporal": "^0.10.0",
-    "execa": "^1.0.0",
     "github-repository-provider": "^4.0.4",
     "local-repository-provider": "^3.0.3",
-    "semver": "^5.5.1"
+    "semver": "^5.5.1",
+    "caporal": "^0.10.0",
+    "execa": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
+    "@babel/plugin-proposal-async-generator-functions": "^7.1.0",
     "ava": "^1.0.0-beta.8",
     "documentation": "^8.1.2",
     "markdown-doctest": "^0.9.1",
     "nyc": "^13.1.0",
     "rollup": "^0.66.2",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-executable": "^1.3.0",
