--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "travis-deploy-once": "travis-deploy-once"
   },
   "dependencies": {
-    "aggregation-repository-provider": "^2.0.18",
-    "github-repository-provider": "^4.0.4",
-    "local-repository-provider": "^3.0.3",
-    "semver": "^5.5.1",
+    "aggregation-repository-provider": "^2.0.19",
     "caporal": "^0.10.0",
-    "execa": "^1.0.0"
+    "execa": "^1.0.0",
+    "github-repository-provider": "^4.0.5",
+    "local-repository-provider": "^3.0.3",
+    "repository-provider": "^5.2.0",
+    "semver": "^5.5.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
