--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
     "travis-deploy-once": "travis-deploy-once"
   },
   "dependencies": {
-    "aggregation-repository-provider": "^2.0.22",
+    "aggregation-repository-provider": "^2.0.23",
     "caporal": "^0.10.0",
     "execa": "^1.0.0",
-    "github-repository-provider": "^4.0.11",
-    "local-repository-provider": "^3.0.7",
+    "github-repository-provider": "^4.0.12",
+    "local-repository-provider": "^3.0.8",
     "repository-provider": "^5.2.5",
-    "semver": "^5.5.1",
-    "stream-buffers": "^3.0.2"
+    "semver": "^5.5.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
