--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
     "@babel/plugin-proposal-async-generator-functions": "^7.1.0",
-    "ava": "^1.0.0-beta.8",
+    "ava": "^1.0.0-rc.1",
     "documentation": "^8.1.2",
     "markdown-doctest": "^0.9.1",
     "nyc": "^13.1.0",
