chore(package): remove @babel/preset-env@^7.1.5 chore(scripts): cover@#overwrite c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage chore(package): add nyc from template chore(package): delete xo chore(package): set $.ava.require='esm' as in template chore(package): set $.ava.files='tests/*-test.js' as in template chore(package): set $.ava.babel='false' as in template chore(package): set $.ava.compileEnhancements='false' as in template

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "semver": "^5.6.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.1.5",
     "ava": "^1.0.0-rc.2",
     "documentation": "^8.1.2",
     "markdown-doctest": "^0.9.1",
@@ -69,17 +68,16 @@
   "homepage": "https://github.com/arlac77/mkpr#readme",
   "ava": {
     "files": [
-      "build/*-test.js"
+      "tests/*-test.js"
     ],
     "presets": [
       "env"
     ],
     "require": [
-      "babel-register"
-    ]
-  },
-  "xo": {
-    "space": true
+      "esm"
+    ],
+    "babel": false,
+    "compileEnhancements": false
   },
   "template": {
     "repository": {
