chore(scripts): cover@#overwrite c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage chore(package): add nyc from template docs(package): remove keyword npm-package-template docs(package): remove keyword null chore(package): set $.ava.require='esm' as in template chore(package): set $.ava.files='tests/*-test.js,tests/*-test.mjs' as in template chore(package): set $.ava.extensions='js,mjs' as in template

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "main": "dist/index.js",
   "module": "src/mkpr.mjs",
   "description": "create pull request by streaming content through a filter",
-  "keywords": [
-    "npm-package-template"
-  ],
+  "keywords": [],
   "contributors": [
     {
       "name": "Markus Felten",
