--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "posttest": "npm run prepare && markdown-doctest",
     "prepare": "rollup -c",
     "docs": "documentation readme src/mkpr.mjs --section=API",
-    "lint": "documentation lint src/mkpr.mjs",
-    "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "lint": "documentation lint src/mkpr.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.0.38",
@@ -48,7 +46,6 @@
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "semantic-release": "^15.13.2",
-    "travis-deploy-once": "^5.0.11",
     "c8": "^3.2.1",
     "esm": "^3.0.84"
   },
