--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "scripts": {
     "cover": "c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage",
-    "test": "ava",
+    "docs": "documentation readme src/mkpr.mjs --section=API",
+    "lint": "documentation lint src/mkpr.mjs",
     "posttest": "npm run prepare && markdown-doctest",
     "prepare": "rollup -c",
-    "docs": "documentation readme src/mkpr.mjs --section=API",
-    "lint": "documentation lint src/mkpr.mjs"
+    "test": "ava"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.0.38",
@@ -37,7 +37,9 @@
   },
   "devDependencies": {
     "ava": "^1.0.1",
+    "c8": "^3.2.1",
     "documentation": "^9.1.1",
+    "esm": "^3.0.84",
     "markdown-doctest": "^0.9.1",
     "rollup": "^1.0.0",
     "rollup-plugin-cleanup": "^3.1.0",
@@ -45,9 +47,7 @@
     "rollup-plugin-executable": "^1.3.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "semantic-release": "^15.13.2",
-    "c8": "^3.2.1",
-    "esm": "^3.0.84"
+    "semantic-release": "^15.13.2"
   },
   "engines": {
     "node": ">=10.15.0"
