--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.0.38",
-    "caporal": "^1.1.0",
+    "commander": "^2.19.0",
     "execa": "^1.0.0",
     "github-repository-provider": "^6.0.13",
-    "local-repository-provider": "^3.2.3",
-    "repository-provider": "^8.6.2",
+    "install": "^0.12.2",
+    "local-repository-provider": "^5.0.3",
+    "content-entry": "^2.0.2",
     "semver": "^5.6.0"
   },
   "devDependencies": {
