--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commander": "^2.20.0",
     "content-entry": "^2.1.2",
     "execa": "^1.0.0",
+    "fast-json-patch": "^2.1.0",
     "github-repository-provider": "^7.1.0",
     "local-repository-provider": "^6.2.5",
     "semver": "^6.0.0"
