--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mkpr": "bin/mkpr"
   },
   "scripts": {
-    "cover": "c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage",
+    "cover": "c8 --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
     "lint": "documentation lint src/mkpr.mjs",
     "posttest": "npm run prepare && markdown-doctest",
@@ -38,11 +38,11 @@
   },
   "devDependencies": {
     "ava": "^1.4.1",
-    "c8": "^4.1.3",
+    "c8": "^4.1.4",
     "documentation": "^10.1.0",
     "esm": "^3.2.22",
     "markdown-doctest": "^0.9.1",
-    "rollup": "^1.11.0",
+    "rollup": "^1.11.2",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-executable": "^1.4.5",
