--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "ava": "^1.4.1",
+    "builtin-modules": "^3.1.0",
     "c8": "^4.1.5",
     "documentation": "^11.0.0",
     "esm": "^3.2.22",
