--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "documentation": "^11.0.0",
     "esm": "^3.2.25",
     "markdown-doctest": "^0.9.1",
-    "rollup": "^1.13.0",
+    "rollup": "^1.13.1",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-executable": "^1.4.5",
@@ -64,6 +64,7 @@
   "homepage": "https://github.com/arlac77/mkpr#readme",
   "ava": {
     "files": [
+      "tests/*-test.js",
       "tests/*-test.mjs"
     ],
     "require": [
@@ -72,6 +73,7 @@
     "babel": false,
     "compileEnhancements": false,
     "extensions": [
+      "js",
       "mjs"
     ]
   },
