--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.17",
+    "bitbucket-repository-provider": "^3.3.13",
     "commander": "^2.20.0",
     "content-entry": "^2.2.0",
     "execa": "^2.0.3",
