--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
 language: node_js
-node_js:
-  - 12.10.0
-cache: npm
-script:
-  - npm run cover
-  - npx codecov
-  - cat ./build/coverage/lcov.info | npx coveralls
+cache: '-npm'
 jobs:
   include:
     - stage: doc
