--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "commander": "^3.0.2",
     "content-entry": "^2.2.1",
     "execa": "^2.0.5",
-    "fast-json-patch": "^2.2.0",
+    "fast-json-patch": "^3.0.0-1",
     "github-repository-provider": "^7.4.15",
     "local-repository-provider": "^6.4.38",
     "semver": "^6.2.0"
