--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cover": "c8 -x 'tests/**/*.mjs' --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
     "lint": "documentation lint src/mkpr.mjs",
-    "posttest": "markdown-doctest",
+    "posttest": "npm run prepare && markdown-doctest",
     "prepare": "rollup -c",
     "pretest": "rollup -c",
     "test": "ava"
@@ -44,7 +44,7 @@
     "documentation": "^12.1.2",
     "esm": "^3.2.25",
     "markdown-doctest": "^1.0.0",
-    "rollup": "^1.25.1",
+    "rollup": "^1.25.2",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-executable": "^1.5.1",
