--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mkpr": "bin/mkpr"
   },
   "scripts": {
-    "cover": "c8 -x 'tests/**/*.mjs' --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
+    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
     "lint": "documentation lint src/mkpr.mjs",
     "posttest": "npm run prepare && markdown-doctest",
