--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "semver": "^7.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^6.1.0",
     "ava": "^2.4.0",
@@ -46,6 +47,7 @@
     "esm": "^3.2.25",
     "markdown-doctest": "^1.0.0",
     "rollup": "^1.28.0",
+    "rollup-plugin-babel": "^4.3.1",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-executable": "^1.5.2",
     "semantic-release": "^15.14.0"
