--- a/package.json
+++ b/package.json
@@ -20,21 +20,20 @@
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
     "lint": "documentation lint src/mkpr.mjs",
-    "posttest": "npm run prepare && markdown-doctest",
+    "posttest": "npm run prepare",
     "prepare": "rollup -c",
-    "pretest": "rollup -c",
     "test": "ava"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.41",
     "bitbucket-repository-provider": "^3.3.46",
     "commander": "^4.1.0",
-    "content-entry": "^2.2.4",
+    "content-entry": "^2.2.6",
     "execa": "^4.0.0",
     "fast-json-patch": "^3.0.0-1",
     "github-repository-provider": "^7.5.11",
     "local-repository-provider": "^6.5.6",
-    "semver": "^7.0.0"
+    "semver": "^7.1.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
