--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ jobs:
       node_js:
         - 12.14.1
       script:
-        - npm run cover
-        - npx codecov
-        - cat ./build/coverage/lcov.info | npx coveralls
+        - npm test
     - stage: doc
       node_js: lts/*
       skip_cleanup: 'true'
