--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ jobs:
         - 12.14.1
       script:
         - npm test
+        - npm run cover
+        - npx codecov
+        - cat ./build/coverage/lcov.info | npx coveralls
     - stage: doc
       node_js: lts/*
       skip_cleanup: 'true'
