chore(travis): (jobs.include) chore(travis): add 12.15.0 remove 12.14.1 (jobs.include.node_js) chore(travis): add npm run cover (jobs.include.script[1]) chore(travis): add npx codecov (jobs.include.script[2]) chore(travis): add cat ./build/coverage/lcov.info | npx coveralls (jobs.include.script[3])

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ jobs:
   include:
     - stage: test
       node_js:
-        - 12.14.1
+        - 12.15.0
       script:
         - npm test
+        - npm run cover
+        - npx codecov
+        - cat ./build/coverage/lcov.info | npx coveralls
     - stage: doc
       node_js: lts/*
       skip_cleanup: 'true'
