--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rollup": "^1.31.0",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-executable": "^1.5.2",
+    "rollup-plugin-consts": "^1.0.1",
     "semantic-release": "^17.0.2"
   },
   "engines": {
