--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "mkpr": "bin/mkpr"
   },
   "scripts": {
-    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
+    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
     "lint": "documentation lint src/mkpr.mjs",
     "prepare": "rollup -c",
-    "test": "ava"
+    "test": "ava --timeout 2m"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.41",
@@ -35,17 +35,10 @@
     "semver": "^7.1.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
     "ava": "^3.3.0",
-    "builtin-modules": "^3.1.0",
     "c8": "^7.1.0",
     "documentation": "^12.1.4",
     "rollup": "^1.31.0",
-    "rollup-plugin-cleanup": "^3.1.1",
-    "rollup-plugin-consts": "^1.0.1",
-    "rollup-plugin-executable": "^1.5.2",
     "semantic-release": "^17.0.2"
   },
   "engines": {
