--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "mkpr": "bin/mkpr"
   },
   "scripts": {
-    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
+    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
     "lint": "documentation lint src/mkpr.mjs",
     "prepare": "rollup -c",
-    "test": "ava"
+    "test": "ava && ava --timeout 2m"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.41",
