chore(travis): (jobs.include) chore(travis): add npx codecov (jobs.include.script[2]) chore(travis): add cat ./build/coverage/lcov.info | npx coveralls (jobs.include.script[3])

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ jobs:
       script:
         - npm test
         - npm run cover
+        - npx codecov
+        - cat ./build/coverage/lcov.info | npx coveralls
     - stage: doc
       node_js: lts/*
       skip_cleanup: 'true'
