chore(package): (template.inheritFrom) chore(package): add {{main}} (main)

--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
   },
   "homepage": "https://github.com/arlac77/mkpr#readme",
   "template": {
-    "inheritFrom": "arlac77/template-cli-app"
+    "inheritFrom": [
+      "arlac77/template-cli-app",
+      "arlac77/template-github"
+    ]
   }
 }
