--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "prepare": "rollup -c",
-    "test": "ava --timeout 2m",
+    "test": "ava --timeout 2m && overwrite ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
     "lint": "documentation lint src/mkpr.mjs"
@@ -36,13 +36,12 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "ava": "^3.5.2",
+    "ava": "^3.6.0",
     "builtin-modules": "^3.1.0",
     "c8": "^7.1.0",
     "documentation": "^12.2.0",
-    "rollup": "^2.3.2",
+    "rollup": "^2.3.3",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-consts": "^1.0.1",
     "rollup-plugin-executable": "^1.5.3",
