chore(package): add ^4.0.2 (devDependencies.@rollup/plugin-json) chore(package): add {{main}} (main)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "ava": "^3.6.0",
     "builtin-modules": "^3.1.0",
