--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   ],
   "license": "BSD-2-Clause",
   "bin": {
-    "mkpr": "bin/mkpr"
+    "mkpr": "src/mkpr.mjs"
   },
   "scripts": {
-    "prepare": "rollup -c",
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme src/mkpr.mjs --section=API",
@@ -35,17 +34,10 @@
     "semver": "^7.2.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.3",
     "ava": "^3.6.0",
     "builtin-modules": "^3.1.0",
     "c8": "^7.1.0",
     "documentation": "^12.3.0",
-    "rollup": "^2.6.1",
-    "rollup-plugin-cleanup": "^3.1.1",
-    "rollup-plugin-consts": "^1.0.1",
-    "rollup-plugin-executable": "^1.5.3",
     "semantic-release": "^17.0.4"
   },
   "engines": {
@@ -61,7 +53,7 @@
   "homepage": "https://github.com/arlac77/mkpr#readme",
   "template": {
     "inheritFrom": [
-      "arlac77/template-cli-app",
+      "arlac77/template-esm-only",
       "arlac77/template-github"
     ]
   }
