--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "module": "src/mkpr.mjs",
+  "module": "src/mkpr-cli.mjs",
   "description": "create pull request by pipeing repository content through filter like sed",
   "contributors": [
     {
@@ -14,13 +14,13 @@
   ],
   "license": "BSD-2-Clause",
   "bin": {
-    "mkpr": "src/mkpr.mjs"
+    "mkpr": "src/mkpr-cli.mjs"
   },
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "documentation readme src/mkpr.mjs --section=API",
-    "lint": "documentation lint src/mkpr.mjs"
+    "docs": "documentation readme src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.47",
