--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "sideEffects": false,
+  "type": "module",
+  "main": "src/mkpr-cli.mjs",
   "module": "src/mkpr-cli.mjs",
   "description": "create pull request by pipeing repository content through filter like sed",
   "contributors": [
@@ -19,8 +22,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.47",
@@ -34,11 +37,10 @@
     "semver": "^7.3.2"
   },
   "devDependencies": {
-    "ava": "^3.6.0",
-    "builtin-modules": "^3.1.0",
+    "ava": "^3.7.0",
     "c8": "^7.1.0",
     "documentation": "^12.3.0",
-    "semantic-release": "^17.0.4"
+    "semantic-release": "^17.0.6"
   },
   "engines": {
     "node": ">=12.16.2"
