--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "sideEffects": false,
   "type": "module",
   "main": "src/mkpr-cli.mjs",
   "module": "src/mkpr-cli.mjs",
@@ -22,8 +21,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "documentation readme src/mkpr-cli.mjs --section=API",
-    "lint": "documentation lint src/mkpr-cli.mjs"
+    "docs": "",
+    "lint": ""
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.47",
