--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: node_js
+addons:
+  chrome: stable
+env:
+  - BROWSER=chrome
 jobs:
   include:
     - stage: test
       node_js:
-        - 13.13.0
+        - 14.0.0
       script:
         - npm test
+        - npm run test
         - npm run cover
         - npx codecov
         - cat ./build/coverage/lcov.info | npx coveralls
