chore(package): add documentation readme src/mkpr-cli.mjs --section=API (scripts.docs) chore(package): add documentation lint src/mkpr-cli.mjs (scripts.lint) chore(package): add false (sideEffects)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "sideEffects": false,
   "type": "module",
   "main": "src/mkpr-cli.mjs",
   "module": "src/mkpr-cli.mjs",
@@ -21,8 +22,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.54",
