chore(package): add documentation readme src/mkpr-cli.mjs --section=API (scripts.docs) chore(package): add documentation lint src/mkpr-cli.mjs (scripts.lint) chore(package): add ^3.8.1 remove ^3.8.0 (devDependencies.ava)

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.54",
@@ -37,7 +37,7 @@
     "semver": "^7.3.2"
   },
   "devDependencies": {
-    "ava": "^3.8.0",
+    "ava": "^3.8.1",
     "c8": "^7.1.0",
     "documentation": "^12.3.0",
     "semantic-release": "^17.0.7"
