--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "sideEffects": false,
   "type": "module",
   "main": "src/mkpr-cli.mjs",
+  "exports": {
+    ".": "./src/mkpr-cli.mjs"
+  },
   "description": "create pull request by pipeing repository content through filter like sed",
   "contributors": [
     {
@@ -21,8 +24,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.56",
