--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "sideEffects": false,
   "type": "module",
-  "main": "src/mkpr-cli.mjs",
+  "main": "./src/mkpr-cli.mjs",
   "exports": {
     ".": "./src/mkpr-cli.mjs",
     "./": "./"
