--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme ./src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint ./src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.6.65",
@@ -45,7 +45,7 @@
     "semantic-release": "^17.0.8"
   },
   "engines": {
-    "node": ">=12.16.3"
+    "node": ">=12.17.0"
   },
   "repository": {
     "type": "git",
