--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme ./src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint ./src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.7.0",
@@ -59,7 +59,7 @@
     "inheritFrom": [
       "arlac77/template-arlac77-github",
       "arlac77/template-esm-only",
-      "arlac77/template-node-component"
+      "arlac77/template-node-app"
     ]
   }
 }
