--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   ],
   "license": "BSD-2-Clause",
   "bin": {
-    "mkpr": "src/mkpr-cli.mjs"
+    "mkpr": "./src/mkpr-cli.mjs"
   },
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "documentation readme ./src/mkpr-cli.mjs --section=API",
-    "lint": "documentation lint ./src/mkpr-cli.mjs"
+    "docs": "",
+    "lint": ""
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.7.13",
