--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "documentation readme ./src/mkpr-cli.mjs --section=API",
-    "lint": "documentation lint ./src/mkpr-cli.mjs"
+    "docs": "",
+    "lint": ""
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.8.1",
-    "bitbucket-repository-provider": "^3.6.9",
+    "bitbucket-repository-provider": "^3.6.10",
     "commander": "^5.1.0",
     "content-entry": "^2.5.0",
     "execa": "^4.0.2",
     "fast-json-patch": "^3.0.0-1",
-    "github-repository-provider": "^7.9.38",
+    "github-repository-provider": "^7.9.39",
     "local-repository-provider": "^6.6.1",
     "semver": "^7.3.2"
   },
