--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme ./src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint ./src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.8.4",
@@ -39,7 +39,7 @@
     "semver": "^7.3.2"
   },
   "devDependencies": {
-    "ava": "^3.8.2",
+    "ava": "^3.9.0",
     "c8": "^7.2.0",
     "documentation": "^13.0.1",
     "semantic-release": "^17.0.8"
