chore(scripts): add documentation readme ./src/mkpr-cli.mjs --section=API (scripts.docs) chore(scripts): add documentation lint ./src/mkpr-cli.mjs (scripts.lint) chore(package): add arlac77/template-coverage (template.inheritFrom) chore(package): add arlac77/template-documentation (template.inheritFrom)

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "docs": "documentation readme ./src/mkpr-cli.mjs --section=API",
+    "lint": "documentation lint ./src/mkpr-cli.mjs"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.8.7",
@@ -58,8 +58,10 @@
   "template": {
     "inheritFrom": [
       "arlac77/template-arlac77-github",
+      "arlac77/template-documentation",
       "arlac77/template-esm-only",
-      "arlac77/template-node-app"
+      "arlac77/template-node-app",
+      "arlac77/template-coverage"
     ]
   }
 }
