--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "test": "ava --timeout 2m",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "documentation readme ./src/mkpr-cli.mjs --section=API",
-    "lint": "documentation lint ./src/mkpr-cli.mjs"
+    "docs": "",
+    "lint": ""
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.8.8",
@@ -35,7 +35,7 @@
     "execa": "^4.0.3",
     "fast-json-patch": "^3.0.0-1",
     "github-repository-provider": "^7.15.5",
-    "local-repository-provider": "^6.7.9",
+    "local-repository-provider": "^6.7.10",
     "semver": "^7.3.2"
   },
   "devDependencies": {
