chore(deps): add ^17.1.2 remove ^17.1.1 (devDependencies.semantic-release)

--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   },
   "scripts": {
     "test": "ava --timeout 2m",
-    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "",
-    "lint": ""
+    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp"
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.8.12",
@@ -42,7 +40,7 @@
     "ava": "^3.12.1",
     "c8": "^7.3.0",
     "documentation": "^13.0.2",
-    "semantic-release": "^17.1.1"
+    "semantic-release": "^17.1.2"
   },
   "engines": {
     "node": ">=14.11.0"
