--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 jobs:
   include:
     - stage: test
-      node_js:
-        - 14.11.0
+      node_js: 14.11.0
       script:
         - npm test
         - npm run cover
