--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "description": "create pull request by pipeing repository content through filter like sed",
   "keywords": [
-    "github",
     "bitbucket",
-    "pull-request",
-    "patch"
+    "github",
+    "patch",
+    "pull-request"
   ],
   "contributors": [
     {
@@ -43,7 +43,7 @@
     "semver": "^7.3.2"
   },
   "devDependencies": {
-    "ava": "^3.12.1",
+    "ava": "^3.13.0",
     "c8": "^7.3.1",
     "documentation": "^13.0.2",
     "semantic-release": "^17.1.2"
