--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "execa": "^4.0.3",
     "fast-json-patch": "^3.0.0-1",
     "github-repository-provider": "^7.17.17",
-    "local-repository-provider": "^7.0.0",
-    "semver": "^7.3.2"
+    "local-repository-provider": "^7.0.0"
   },
   "devDependencies": {
     "ava": "^3.13.0",
