--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "content-entry": "^2.5.1",
     "execa": "^4.0.3",
     "fast-json-patch": "^3.0.0-1",
-    "github-repository-provider": "^7.17.21",
+    "github-repository-provider": "7.17.22",
     "local-repository-provider": "^7.0.3"
   },
   "devDependencies": {
