fix(deps): bump

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "license": "BSD-2-Clause",
   "bin": {
-    "mkpr": "./src/mkpr-cli.mjs"
+    "mkpr": "src/mkpr-cli.mjs"
   },
   "scripts": {
     "test": "npm run test:ava",
@@ -34,13 +34,13 @@
   },
   "dependencies": {
     "aggregation-repository-provider": "^2.8.18",
-    "bitbucket-repository-provider": "^3.7.30",
+    "bitbucket-repository-provider": "^3.7.31",
     "commander": "^6.1.0",
     "content-entry": "^2.5.1",
     "execa": "^4.0.3",
     "fast-json-patch": "^3.0.0-1",
-    "github-repository-provider": "^7.17.24",
-    "local-repository-provider": "^7.0.4"
+    "github-repository-provider": "^7.17.25",
+    "local-repository-provider": "^7.0.5"
   },
   "devDependencies": {
     "ava": "^3.13.0",
