--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "keywords": [
     "bitbucket",
     "github",
+    "gitea",
     "patch",
     "pull-request"
   ],
@@ -33,12 +34,13 @@
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp"
   },
   "dependencies": {
-    "aggregation-repository-provider": "^2.9.39",
+    "aggregation-repository-provider": "^3.0.0",
     "bitbucket-repository-provider": "^3.7.92",
     "commander": "^7.1.0",
     "content-entry": "^2.6.2",
     "execa": "^5.0.0",
     "fast-json-patch": "^3.0.0-1",
+    "gitea-repository-provider": "^1.16.0",
     "github-repository-provider": "^7.22.0",
     "local-repository-provider": "^7.0.78"
   },
