--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mkpr",
-  "version": "0.0.0-semantic-release",
+  "version": "2.1.99",
   "publishConfig": {
     "access": "public"
   },
@@ -36,7 +36,7 @@
     "execa": "^6.0.0",
     "fast-json-patch": "^3.0.0-1",
     "gitea-repository-provider": "^1.16.52",
-    "github-repository-provider": "^7.25.6",
+    "github-repository-provider": "^7.25.7",
     "local-repository-provider": "^7.0.111"
   },
   "devDependencies": {
