--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mkpr",
-  "version": "2.1.128",
+  "version": "0.0.0-semantic-release",
   "publishConfig": {
     "access": "public"
   },
